--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,8 @@ nav {
   width: 100vw;
 }
 
+/* secondary nav */
+
 .secondary-nav {
   font: normal 13px/1.5 sans-serif;
   color: #a5a5a5;
@@ -54,9 +56,27 @@ nav {
   margin-right: 1rem;
 }
 
+/* primary nav */
+
 .primary-nav {
   position: fixed;
-  top: 6vh;
+  top: 4.5vh;
+  height: 6vh;
+  background: gray;
+}
+
+.primary-nav > * {
+  width: 5%;
+  font-style: uppercase;
+}
+
+.primary-nav > .search {
+  margin-left: auto;
+}
+
+.search {
+  text-align: right;
+  padding-right: 1rem;
 }
 
 /* dropdowns */
@@ -66,34 +86,39 @@ nav {
   display: inline-block;
 }
 
-.dropdown ul {
-  list-style-type: none;
-  text-align: left;
+.dropbtn {
+  cursor: pointer;
 }
 
 .dropdown-content {
   display: none;
+  background: black;
   position: absolute;
-  background-color: #f1f1f1;
-  padding-top: -5px;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
 .dropdown:hover .dropdown-content,
-.dropdown:focus .dropdown-content {
+.dropdown:focus .dropdown-content,
+.dropdown:active .dropdown-content {
   display: block;
 }
 
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
+.dropdown-item {
+  cursor: pointer;
+  color: inherit;
+  background: black;
   text-decoration: none;
   display: block;
+  margin: 0.25rem 0.7rem;
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-  background-color: #ddd;
+.dropdown-item:hover {
+  color: white;
+}
+
+@media screen and (min-width: 768px) {
+  /* remove hamburger */
 }
