--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,15 @@
 /* site wide */
+* {
+  box-sizing: border-box;
+}
+
 body {
   color: black;
   font: normal 14px/1.5 'Roboto Mono', monospace;
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  /* set to 99.3vw to account for right hand scroll bar */
+  width: 99.3vw;
 }
 
 a {
@@ -29,11 +34,10 @@ nav {
   align-items: center;
   margin: 0;
   padding: 0;
-  width: 100vw;
+  width: 100%;
 }
 
 /* secondary nav */
-
 .secondary-nav {
   font: normal 13px/1.5 sans-serif;
   color: #a5a5a5;
@@ -41,6 +45,7 @@ nav {
   position: relative;
   height: 4.5vh;
   margin: 0;
+  width: 100%;
 }
 
 .secondary-nav a,
@@ -63,12 +68,15 @@ nav {
 }
 
 /* primary nav */
-
 .primary-nav {
+  margin: 0;
+  background: white;
   justify-content: space-between;
-  position: fixed;
-  height: 7vh;
-  padding: 0 0.8rem;
+  top: -1px;
+  position: -webkit-sticky;
+  position: sticky;
+  z-index: 1;
+  padding-left: 0.8rem;
 }
 
 .primary-nav > * {
@@ -97,8 +105,8 @@ nav {
   opacity: 0.7;
   color: gray;
   margin-left: auto;
-  margin-right: 1rem;
   padding-left: 1rem;
+  padding-right: 1rem;
   border-left: 0.5px solid rgba(0, 0, 0, 0.2);
 }
 
@@ -114,18 +122,19 @@ nav {
 }
 
 .nav-message {
+  position: -webkit-sticky;
+  position: sticky;
   display: flex;
-  position: fixed;
+  top: 6.5vh;
   font-size: 12px;
   font-weight: 400;
   align-items: center;
-  margin-top: 6.7vh;
-  padding: 0.5rem;
-  padding-left: 0.8rem;
-  height: 1.5vh;
-  width: 100vw;
+  padding: 0.8rem 0 0.8rem 1.4rem;
+  height: 3vh;
+  width: 100%;
   background: #ffdd33;
   cursor: pointer;
+  z-index: 1;
 }
 
 .nav-message .arrow {
@@ -133,7 +142,6 @@ nav {
 }
 
 /* dropdowns */
-
 .dropdown {
   position: relative;
   display: inline-block;
@@ -173,23 +181,19 @@ nav {
 }
 
 /* header */
-
 header {
-  display: flex;
-  margin: 0.2rem;
-  height: 80vh;
+  /* display: grid; */
   background: white;
+  height: 90vh;
 }
 
 .picture-one {
-  width: 65%;
-  height: 100%;
-}
-
-.picture-two,
-.picture-three {
-  width: 32%;
-  height: 48%;
+  margin-top: 0.2rem;
+  background: no-repeat center / contain
+    url('https://img-cdn.tnwcdn.com/image?fit=1280%2C720&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2019%2F09%2FMacAirDeal.png&signature=3775eadd41c0a6d458f55d13da6b9286');
+  width: 66%;
+  height: 80%;
+  display: inline-block;
 }
 
 /* main content */
