good spot to stop, going forward is kind of repetitive

--- a/src/style.css
+++ b/src/style.css
@@ -127,6 +127,7 @@ main {
     color: #a5a5a5;
     background: black;
     position: relative;
+    display: flex;
     height: 4.5vh;
     margin: 0;
     width: 100%;
